--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
 		"passport-github": "^1.1.0",
 		"socket.io": "^1.7.2",
 		"passport.socketio": "^3.7.0",
-		"cookie-parser": "^1.4.3"
+		"cookie-parser": "^1.4.3",
+		"jquery": "3.4.1"
 	},
 	"engines": {
 		"node": "4.4.3"
